# rb_alf_feshbach

./: .gitignore  Cargo.toml
analysis/: analysis.ipynb
potential_data/: X_2Ap_Rb+AlF.txt
py_common/: aggregate_outputs.py  bounds_dependence.py  convert_outputs.py  scattering_dependence.py  units.py  utility.py  wave_function.py
src/: basis.rs  hifi_aniso.rs  main.rs  operators.rs  potential.rs
